rbac-best-practices-cel/restrict-binding-system-groups/restrict-binding-system-groups.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-binding-system-groups
  annotations:
    policies.kyverno.io/title: Restrict Binding System Groups in CEL expressions
    policies.kyverno.io/category: RBAC Best Practices in CEL 
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: RoleBinding, ClusterRoleBinding, RBAC
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.26"
    policies.kyverno.io/description: >-
      Certain system groups exist in Kubernetes which grant permissions that
      are used for certain system-level functions yet typically never appropriate
      for other users. This policy prevents creating bindings for system:masters group.      
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: restrict-masters
      match:
        any:
        - resources:
            kinds:
              - RoleBinding
              - ClusterRoleBinding
            operations:
              - CREATE
              - UPDATE
      validate:
        cel:
          expressions:
            - expression: "object.roleRef.name != 'system:masters'"
              message: "Binding to system:masters is not allowed."
