rbac-best-practices-cel/restrict-binding-system-groups/e2e/vap-binding-assert.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: restrict-binding-system-groups-binding
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: restrict-binding-system-groups
spec:
  policyName: restrict-binding-system-groups
